--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"></button>
       </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">9 Am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 btn saveBtn"></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
