Updated 12pm div

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button class="col-md-1 btn saveBtn"></button>
       </div>
       <div class="row time-block">
-        <div class="col-md-1 hour">9 Am</div>
+        <div class="col-md-1 hour">12 Pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 btn saveBtn"></button>
       </div>
